# rag-vs-agents-tabular

./: .gitignore  LICENSE  README.md
backend/: agent_handler.py  csv_tools.py  main.py  pyproject.toml  rag_handler.py  requirements.txt  seed_data.py
frontend/: package-lock.json  package.json  tailwind.config.js
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/components/: AgentPanel.tsx  MetricsBar.tsx  PresetChips.tsx  QueryInput.tsx  RAGPanel.tsx
frontend/lib/: types.ts
